--- a/blog.html
+++ b/blog.html
@@ -225,6 +225,8 @@
               <p>well</p>
               <img src="https://i.postimg.cc/3WnXgRn8/temp-Imageav-BTTj.avif" alt="temp-Imageav-BTTj"/>
 <img src="https://i.postimg.cc/vgGnnFnx/temp-Image-LMZ3-S7.avif" alt="temp-Image-LMZ3-S7"/>
+              <p>sky blue, violet, pale pink<br>unusual things to fry<br>prefs:root=Privacy&path=LOCATION/LOCATION_SHARING<br>watching machine<br>international conference on suicide terrorism studies, kyiv, ukraine, 2025-08-06<br>The beneficial owner is a tax resident of Ukraine and is not engaged in a fixed base or permanent establishment in the United States.<br>definitely agree - slightly disagree - slightly agree - slightly agree - definitely agree - definitely agree - definitely disagree - definitely disagree - definitely agree - definitely disagree<br>Поповнення із-за кордону USD<br>Мені здається, техніка чи  медіум не визначає «сучасність» твору<br>Шум в серці<br>вдих через ніс, довгий видих через рот, дихай животом, одну руку на живіт другу на грудну клітину<br>Отримувач
+ФОП Подать Олексій Вікторович</p>
             </div>
           </section>
         </main>
