--- a/blog.html
+++ b/blog.html
@@ -221,7 +221,7 @@
         <main class="content">
           <section id="about">
             <div class="about-box">
-              <audio src="audio/music.mp3" autoplay loop></audio>
+              <audio id="bg-music" src="audio/music.mp3" controls loop></audio>
               <h2>03.08.-08.08.2025</h2>
               <p>well</p>
               <img src="https://i.postimg.cc/3WnXgRn8/temp-Imageav-BTTj.avif" alt="temp-Imageav-BTTj"/>
