--- a/blog.html
+++ b/blog.html
@@ -221,6 +221,8 @@
         <main class="content">
           <section id="about">
             <div class="about-box">
+              <h2>15.08.2025</h2>
+              <p>mobile test</p>
               <audio id="bg-music" src="audio/music.mp3" controls loop></audio>
               <h2>03.08.-08.08.2025</h2>
               <p>well</p>
