--- a/blog.html
+++ b/blog.html
@@ -222,7 +222,7 @@
           <section id="about">
             <div class="about-box">
               <h2>15.08.2025</h2>
-              <p>mobile test</p>
+              <p>mobile test<br>success</p>
               <audio id="bg-music" src="audio/music.mp3" controls loop></audio>
               <h2>03.08.-08.08.2025</h2>
               <p>well</p>
