--- a/blog.html
+++ b/blog.html
@@ -221,7 +221,10 @@
         <main class="content">
           <section id="about">
             <div class="about-box">
-              <p> we were born to feel everything and i just learn to </p>
+             <h2>13.12.2025</h2>
+             <p>we were born to feel everything</p>
+             <h2>10.12.2025</h2>
+             <p>we were born to feel everything and i just learn to</p>
               <h2>15.08.2025</h2>
               <p>mobile test<br>success</p>
               <audio id="bg-music" src="audio/music.mp3" controls loop></audio>
