Add upcoming performance dates to index.html

--- a/index.html
+++ b/index.html
@@ -387,6 +387,9 @@
             <section id="performances">
               <h2>Live acts</h2>
               <div style="max-width: 500px">
+                <p><b>20.12.2025</b> - Abo Records, Kyiv</p>
+                <p><b>15.11.2025</b> - ∄ 6th Anniversary - K41, Kyiv</p>
+                <p><b>13.10.2025</b> - нойз щосереди (Noise Every Wednesday) #100 - Otel', Kyiv</p>
                 <p><b>16.08.2025</b> - Cxema Backstage - Otel', Kyiv</p>
                 <p><b>19.07.2025</b> - Detaliзація - Ivano-Frankivsk</p>
                 <p><b>28.06.2025</b> - Bloomed in September label showcase - 20ft Radio, Kyiv</p>
