Add new entry to the blog section
Added a new date and corresponding emotional reflection.

--- a/blog.html
+++ b/blog.html
@@ -221,6 +221,8 @@
         <main class="content">
           <section id="about">
             <div class="about-box">
+             <h2>03.01.2026</h2>
+             <p>the pain feels unbearable</p>
               <h2>29.12.2025</h2>
              <p>i let everyone down. i let down everyone i love, and my understanding of love gets lost because of it. i swim in a sea of different meanings of love for other people, and none of them sticks to me. i swim in a sea of sentences that begin with i, and i don’t know what that word means.</p>
              <h2>13.12.2025</h2>
