--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
               <p><b>2026</b> - LP TBA</p>
               <p><b>2024</b> - <a href="https://orcd.co/nadni" target="_blank" rel="noopener noreferrer">лагідні стосунки зі світом на дні землі</a> - ПОТОП</p>
               <p><b>2023</b> - <a href="https://podat.bandcamp.com/album/golden-gate" target="_blank" rel="noopener noreferrer">Golden Gate</a></p>
-              <p><b>2019</b> - I Regret Everything I Have Ever Done Online - GinPlatonic</p>
+              <p><b>2019</b> - I Regret Everything I Have Ever Done Online - Gin&Platonic</p>
               <p><b>2018</b> - Love</p>
               <p style="font-size: 16px">
                 <a href="https://www.linktr.ee/podat" target="_blank" rel="noopener noreferrer">more</a>
