Add new entries to the about section

--- a/blog.html
+++ b/blog.html
@@ -221,6 +221,8 @@
         <main class="content">
           <section id="about">
             <div class="about-box">
+             <h2>07.01.2026</h2>
+             <p>the pain feels bearable</p>
              <h2>03.01.2026</h2>
              <p>the pain feels unbearable</p>
               <h2>29.12.2025</h2>
