Add release announcement to blog

--- a/blog.html
+++ b/blog.html
@@ -221,6 +221,8 @@
         <main class="content">
           <section id="about">
             <div class="about-box">
+             <h2>08.01.2026</h2>
+             <p>in case i miss something - i got an album to be released via pg. cover - last photo on this post https://www.instagram.com/p/DNDSF01sFAX/?img_index=6 not cut square. thanks in advance.</p>
              <h2>07.01.2026</h2>
              <p>the pain feels bearable</p>
              <h2>03.01.2026</h2>
