Update sidebar link to point to the homepage

--- a/blog.html
+++ b/blog.html
@@ -212,7 +212,7 @@
   <div class="blur-wrapper">
     <div class="container">
       <aside class="sidebar">
-        <h1><a href="https://www.oleksiipodat.com" class="no-underline">back</a></h1>
+        <h1><a href="/" class="no-underline">back</a></h1>
         <nav>
           <h1></h1>
         </nav>
