Update Twitter title and homepage link in index.html

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <meta property="og:url" content="https://oleksiipodat.com" />
     <meta property="og:type" content="website" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Oleksii Podat / Олексій Подать" />
+    <meta name="twitter:title" content=" / Олексій Подать" />
     <meta
       name="twitter:description"
       content="Ukrainian composer and sound artist. Portfolio, projects, and releases." />
@@ -252,7 +252,7 @@ section.is-blurred {
       <div class="container">
         <aside class="sidebar">
           
-          <h1><a href="index.html" class="no-underline">Oleksii Podat</a></h1>
+          <h1><a href="/" class="no-underline">Oleksii Podat</a></h1>
           <nav>
             <a href="#about">About</a>
             <a href="#work">Projects</a>
