--- a/index.html
+++ b/index.html
@@ -240,7 +240,6 @@
 section.is-blurred {
   filter: blur(4px);
   opacity: 0.35;
-  pointer-events: none;
 }
       
     </style>
@@ -516,27 +515,26 @@ document.addEventListener('DOMContentLoaded', () => {
   const sections = document.querySelectorAll('main section');
   const menuLinks = document.querySelectorAll('.sidebar nav a[href^="#"]');
 
-  function focusSection(targetSection) {
+  function focusSection(target) {
     sections.forEach(section => {
-      section.classList.toggle(
-        'is-blurred',
-        section !== targetSection
-      );
+      section.classList.toggle('is-blurred', section !== target);
     });
   }
 
-  // Клік по меню
+  // клік по меню
   menuLinks.forEach(link => {
-    link.addEventListener('click', e => {
+    link.addEventListener('click', () => {
       const id = link.getAttribute('href').slice(1);
       const target = document.getElementById(id);
       if (target) focusSection(target);
     });
   });
 
-  // Клік по самій секції
+  // клік по секції (ловимо тільки перший рівень)
   sections.forEach(section => {
-    section.addEventListener('click', () => {
+    section.addEventListener('click', e => {
+      // не реагуємо на кліки по лінках
+      if (e.target.closest('a')) return;
       focusSection(section);
     });
   });
