--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@ section.is-blurred {
             </section>
             <section id="releases">
               <h2>Releases</h2>
-              <p><b>2026</b> - LP TBA</p>
+              <p><b>2026</b> - We Were Born to Feel Everything - forthcoming on Pep Gaffe</p>
               <p><b>2024</b> - <a href="https://orcd.co/nadni" target="_blank" rel="noopener noreferrer">лагідні стосунки зі світом на дні землі</a> - ПОТОП</p>
               <p><b>2023</b> - <a href="https://podat.bandcamp.com/album/golden-gate" target="_blank" rel="noopener noreferrer">Golden Gate</a></p>
               <p><b>2019</b> - I Regret Everything I Have Ever Done Online - Gin&Platonic</p>
