Add publication links to index.html

--- a/index.html
+++ b/index.html
@@ -441,6 +441,12 @@ section.is-blurred {
             <section id="texts">
               <h2>Publications</h2>
               <div style="max-width: 500px">
+                
+                <p>
+                  <a href="https://substack.com/home/post/p-189348848" target="_blank" rel="noopener noreferrer"
+                    >20ft Records 'Blackout Tape' review for artslooker (ukr, <a href="https://substack.com/home/post/p-189360685">eng</a>)</a
+                  >
+                </p>
                 <p>
                   <a
                     href="https://easterndaze.net/noise-every-wednesday-a-lesson-in-sustainability-from-kyivs-experimental-scene/" target="_blank" rel="noopener noreferrer">Noise Every Wednesday: A Lesson in Sustainability From Kyiv’s Experimental Scene</a
