Fix link formatting in index.html

--- a/index.html
+++ b/index.html
@@ -444,8 +444,7 @@ section.is-blurred {
                 
                 <p>
                   <a href="https://substack.com/home/post/p-189348848" target="_blank" rel="noopener noreferrer"
-                    >20ft Records 'Blackout Tape' review for artslooker (ukr, <a href="https://substack.com/home/post/p-189360685">eng</a>)</a
-                  >
+                    >20ft Records 'Blackout Tape' review for artslooker </a>(ukr, <a href="https://substack.com/home/post/p-189360685">eng</a>)
                 </p>
                 <p>
                   <a
