--- a/WWBTFE.html
+++ b/WWBTFE.html
@@ -224,6 +224,7 @@
              <h2>Oleksii Podat - We Were Born to Feel Everything (Pep Gaffe, 2026)</h2>
              <p><iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/soundcloud%3Atracks%3A2243455523%3Fsecret_token%3Ds-lvHxX1n8QCu&color=%23646464&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/a5aaaaa" title="ААААА" target="_blank" style="color: #cccccc; text-decoration: none;">ААААА</a> · <a href="https://soundcloud.com/a5aaaaa/w3-were-born-to-feel-everything/s-lvHxX1n8QCu" title="We Were Born to Feel Everything" target="_blank" style="color: #cccccc; text-decoration: none;">We Were Born to Feel Everything</a></div></p>
             </div>
+           <p>Cover photo: <a href="https://www.instagram.com/kanoge_/">Anton Chernyak</a></p>
           </section>
         </main>
       </div>
